fix(style): wrong margin space for Popovers

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -757,6 +757,7 @@ ul#toc,#toc li {
     .popover-title {
       padding-top: 9px;
       margin-top: 0;
+      margin-bottom: 0;
       color: @gray;
     }
   }
